[metadata]
name = sbank
license = GPL-2.0-or-later
description = CBC SBank
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: MacOS
	Operating System :: POSIX
	Operating System :: Unix
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Scientific/Engineering :: Astronomy
	Topic :: Scientific/Engineering :: Physics

[options]
setup_requires = setuptools >= 30.3.0
install_requires =
	h5py
	lalsuite
	lscsoft-glue
	matplotlib
	numpy
	python-ligo-lw
	scipy
	six
packages = find:
python_version = >=3.6
scripts =
	bin/lalapps_cbc_sbank
	bin/lalapps_cbc_sbank_choose_mchirp_boundaries
	bin/lalapps_cbc_sbank_hdf5_bankcombiner
	bin/lalapps_cbc_sbank_hdf5_choose_mchirp_boundaries
	bin/lalapps_cbc_sbank_pipe
	bin/lalapps_cbc_sbank_plot_sim
	bin/lalapps_cbc_sbank_sim
	bin/lalapps_cbc_sbank_sim_pipe

[tool:pytest]
addopts = -r s

[flake8]
max-line-length = 100
select =
	E,
	EXE,
	F,
	W,
ignore =
	E226,
	W503,
per-file-ignores =
	__init__.py:F401
