[metadata]
name = sbank
version = attr: sbank.__version__
author = The Sbank team
maintainer = Ian Harry
maintainer_email = ian.harry@ligo.org
description = A library for generating template banks of compact binary mergers for gravitational-wave searches using the "stochastic" placement algorithm
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-2.0-or-later
url = https://github.com/gwastro/sbank
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: MacOS
	Operating System :: POSIX
	Operating System :: Unix
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Topic :: Scientific/Engineering :: Astronomy
	Topic :: Scientific/Engineering :: Physics
project_urls =
	Bug Tracker = https://github.com/gwastro/sbank/issues/
	Source Code = https://github.com/gwastro/sbank

[options]
setup_requires =
	Cython
	numpy
	setuptools >= 30.3.0
install_requires =
	h5py
	lalsuite
	lscsoft-glue
	matplotlib
	numpy
	python-ligo-lw
	scipy
	six
packages = find:
python_version = >=3.6
scripts =
	bin/sbank
	bin/sbank_choose_mchirp_boundaries
	bin/sbank_hdf5_bankcombiner
	bin/sbank_hdf5_choose_mchirp_boundaries
	bin/sbank_pipe
	bin/sbank_plot_sim
	bin/sbank_sim
	bin/sbank_sim_pipe

[coverage:run]
plugins = Cython.Coverage

[tool:pytest]
addopts = -r a

[pep8]
; this sets the line-length for codeclimate
max-line-length = 100

[flake8]
max-line-length = 100
select =
	E,
	EXE,
	F,
	W,
ignore =
	E226,
	W503,
per-file-ignores =
	__init__.py:F401
